--- a/package.json
+++ b/package.json
@@ -71,6 +71,9 @@
         "@material-ui/core": "^4.11.0",
         "@material-ui/icons": "^4.9.1",
         "axios": "^0.20.0",
+        "compression": "^1.7.4",
+        "cors": "^2.8.5",
+        "dotenv": "^8.2.0",
         "express": "^4.17.1",
         "react": "^16.13.1",
         "react-dom": "^16.13.1",
