--- a/package.json
+++ b/package.json
@@ -77,6 +77,7 @@
         "express": "^4.17.1",
         "react": "^16.13.1",
         "react-dom": "^16.13.1",
+        "react-infinite-scroll-component": "^5.1.0",
         "react-transition-group": "^4.4.1",
         "styled-components": "^5.1.1"
     }
