--- a/package.json
+++ b/package.json
@@ -70,6 +70,7 @@
     "dependencies": {
         "@material-ui/core": "^4.11.0",
         "@material-ui/icons": "^4.9.1",
+        "@material-ui/lab": "^4.0.0-alpha.56",
         "axios": "^0.20.0",
         "compression": "^1.7.4",
         "cors": "^2.8.5",
